# hashcode

2014/python/: checker.py  city.py  greedy_0.py
2016/cpp/: CMakeLists.txt  annealing_simulator.h  checker.cpp  checker.h  main.cpp  models.h  plot_helper.py  simulator.cpp  simulator.h  util.cpp  util.h
2019/python/: checker.py  models.py  permutations.py  state.py
